--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,17 @@
+2014-03-06  Ethan A Merritt  <merritt@u.washington.edu>
+
+	* Makefile.am Makefile.maint aclocal.m4 configure.in docs/Makefile.am
+	lisp/* README.emacs:
+
+	Bruce Ravel's gnuplot-mode package for emacs is now maintained 
+	elsewhere.  Remove the outdated copy (2002 era) from the gnuplot
+	repository, since it causes more confusion than help for people
+	wanting to install gnuplot-mode.  README.emacs documents the
+	removal and provides a pointer to the project's own repository.
+
+	* docs/Makefile.am: Include figures in the pdf manual by default.
+	If you really don't want figures, say `make nofigures pdf`.
+
 2014-03-04  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* configure.in:  More compact summary of terminal configuration.
