--- a/docs/titlepag.tex
+++ b/docs/titlepag.tex
@@ -1,5 +1,5 @@
 %
-% $Id: titlepag.tex,v 1.39.2.2 2014/11/12 21:30:14 sfeam Exp $
+% $Id: titlepag.tex,v 1.39.2.3 2014/12/06 06:23:19 sfeam Exp $
 %
 
 \ifx\LaTeXe\undefined
@@ -174,8 +174,8 @@
 
   \vspace{2ex}
 
-%  15 May 2014  Version 5.0
-   Version 5.0 (rc3 November 2014)
+%  05 Dec 2014  Version 5.0
+   Version 5.0 (December 2014)
 
    \end{center}
 \newpage
