--- a/docs/titlepag.tex
+++ b/docs/titlepag.tex
@@ -1,5 +1,5 @@
 %
-% $Id: titlepag.tex,v 1.45 2017-05-15 21:07:17 sfeam Exp $
+% $Id: titlepag.tex,v 1.46 2017-06-20 19:29:42 sfeam Exp $
 %
 
 \ifx\LaTeXe\undefined
@@ -175,8 +175,8 @@
 
   \vspace{2ex}
 
-%  30 March 2016  Version 5.1
-   Version 5.1 (development snapshot May 2017)
+%  June 2017  Version 5.3
+   Version 5.3 (development snapshot June 2017)
 
    \end{center}
 \newpage
